--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tangwei/apidocs",
+    "name": "avrilko/apidocs",
     "description": "A swagger library for Hyperf.",
     "license": "MIT",
     "keywords": [
